Projeto final - Spark BigData Processing

--- a/Projeto Covid 19 BR.ipynb
+++ b/Projeto Covid 19 BR.ipynb
@@ -1,11 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Projeto final do curso Spark - Big Data Processing Semantix Academy\n",
+    "\n",
+    "### Campannha Nacional de Vacinação contra Convid-19"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importação das bibliotecas\n",
     "from pyspark.sql.functions import *\n",
     "import pyspark.sql.functions as F\n",
     "from  pyspark.sql.types import IntegerType\n",
